Fix: Revenge happening, after notable peasant is persuaded not to revenge, just after criminal hero capture.
231225 v15.1.3.3
Fix: Dublicated revenger parties.
Fix: Quest data overwrite in case of not ended revenge.
Fix: Possible quest state stuck.
231226 v15.1.3.4
Fix: Crash at MapEvent. Update after notable party is attacked and mod tries to end the revenge quest and clean quest data.
Fix: Crash when Revenger's party has no revenge quest data after saved game load.
231229 v15.1.3.5
         Added parameters for persuasion configuration:
         PersuadeNotableToRevengeTraitsForOption0
         PersuadeNotableToRevengeTraitsForOption1
         PersuadeNotableToRevengeTraitsForOption2
         PersuadeNotableNotToRevengeTraitsForOption0
         PersuadeNotableNotToRevengeTraitsForOption1
         PersuadeNotableNotToRevengeTraitsForOption2
         AccuseNotableTraitsForOption0
         AccuseNotableTraitsForOption1
         AccuseNotableTraitsForOption2
         Feature: Notable persuation chance depend on traits, relations, situation too.
         Fix: Crash notable party attacked after game reload.
         Fix: Notable party disband after  game reload.
231229 v15.1.3.6
        Fix: Rare AI executions.
        Fix: Notable party disbanding.
240201 v15.1.3.8
Feature: 1.2.9 support.
240412 v15.1.3.9
        Fix: [DeLiXxN] English dialogues.
        Fix: dialogues when peasant is commenting his revenge.
240627 v15.1.3.10
Feature: v1.2.10 support
240627 v15.1.3.11
Fix: crash after decision to kill the notable peasant while visiting the village.
240829 v15.1.3.12
Feature: v1.2.11 support
Fix: Case where player pays reparation without dialogue, when prisoner is player and has money.
240914 v15.1.3.13
Patch: Additional null checks (patch for Adventurer mod).
240921 v15.1.3.14
Feature: Added option for player to pay the reparation, when blaming another hero for the crime does not succeed.
Feature: (not implemented) Last words before beheading.