@@ -2185,39 +2185,16 @@ namespace PeasantRevenge
                 MBTextManager.SetTextVariable("PLCOMMENT", text);
                 return true;
             },
-            () =>
-            {
-                peasant_revenge_lord_start_end_consequence ( );
-            } , 100, null, null);
+           new ConversationSentence.OnConsequenceDelegate (peasant_revenge_lord_start_end_consequence) ,100 , null, null);
+            
             /*TODO: peasant_revenge_lord_start_grievance_denied_pay_end_pl_c should be persuation*/
+            
             campaignGameStarter.AddPlayerLine (
           "peasant_revenge_lord_start_grievance_denied_pay_end_comment_last_w" ,
           "peasant_revenge_lord_start_grievance_denied_pay_end_pl_c" ,
-          "close_window" ,
-          "{PLCOMMENTLAST}" ,()=>{
-
-              TextObject text = new TextObject("{=PRev0129}What's there to discuss?");
-              if(!currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.party_no_decision))
-              {
-                  text = new TextObject ("{=PRev0102}A good decision...");
-              }
-              else if(currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.criminal_killed))
-              {
-                  /*TODO:by traits should select lines*/
-                  text = new TextObject ("{=*}You will regret it!");
-              }
-              else if(currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.accused_hero_killed))
-              {
-                  text = new TextObject ("{=PRev0135}These criminals are too dangerous.");
-              }
-              
-              MBTextManager.SetTextVariable ("PLCOMMENTLAST" ,text ,false);
-              return true;
-          } ,
-          () =>
-          {
-              peasant_revenge_lord_start_end_consequence ( );
-          } ,
+          "close_window" ,/*TODO: create ai reaction to this comment*/
+          "{PLCOMMENTLAST}" ,new ConversationSentence.OnConditionDelegate(peasant_revenge_player_last_words_condition) ,
+         new ConversationSentence.OnConsequenceDelegate(peasant_revenge_lord_start_end_consequence),
           100 ,new ConversationSentence.OnClickableConditionDelegate (this.peasant_revenge_player_last_words_clickable));
 
             campaignGameStarter.AddDialogLine(
@@ -2861,6 +2838,63 @@ namespace PeasantRevenge
             Campaign.Current.ConversationManager.AddDialogFlow(this.GetNotablePersuasionDialogFlow(), this);
         }
 
+        private bool peasant_revenge_player_last_words_condition ()
+        {
+            TextObject text = new TextObject("{=PRev0129}What's there to discuss?");
+
+            bool PRev0149 = false;
+            bool PRev0150 = false;
+            bool PRev0151 = false;
+            bool PRev0152 = false;
+            bool PRev0153 = false;
+            bool PRev0154 = false;
+
+            if(currentRevenge.accused_hero != null)
+            {
+                /*Checking MainHero traits and relations with accused hero*/
+                PRev0149 = CheckConditions (Hero.MainHero ,currentRevenge.accused_hero.HeroObject ,_cfg.values.ai.lastWordsIdPRev0149);
+                PRev0150 = CheckConditions (Hero.MainHero ,currentRevenge.accused_hero.HeroObject ,_cfg.values.ai.lastWordsIdPRev0150);
+                PRev0151 = CheckConditions (Hero.MainHero ,currentRevenge.accused_hero.HeroObject ,_cfg.values.ai.lastWordsIdPRev0151);
+                PRev0152 = CheckConditions (Hero.MainHero ,currentRevenge.accused_hero.HeroObject ,_cfg.values.ai.lastWordsIdPRev0152);
+                PRev0153 = CheckConditions (Hero.MainHero ,currentRevenge.accused_hero.HeroObject ,_cfg.values.ai.lastWordsIdPRev0153);
+                PRev0154 = CheckConditions (Hero.MainHero ,currentRevenge.accused_hero.HeroObject ,_cfg.values.ai.lastWordsIdPRev0154);
+            }
+
+            if(!currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.party_no_decision))
+            {
+                text = new TextObject ("{=PRev0102}A good decision...");
+               
+                if(PRev0149)
+                { 
+                    text = new TextObject ("{=PRev0149}So my friend got away with it."); 
+                }
+                else if(PRev0150)
+                {
+                    text = new TextObject ("{=PRev0150}I'm glad my friend is safe.");
+                }
+                else if(PRev0151)
+                { 
+                    text = new TextObject ("{=PRev0151}This bastard should have died.");
+                }
+                else if(PRev0152)
+                {
+                    text = new TextObject ("{=PRev0152}This bastard deserve your pity.");
+                }
+            }
+            else if(currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.criminal_killed))
+            {
+                text = new TextObject ("{=*}You will regret it!");
+            }
+            else if(currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.accused_hero_killed))
+            {
+                text = new TextObject ("{=PRev0135}These criminals are too dangerous.");
+            }
+
+            MBTextManager.SetTextVariable ("PLCOMMENTLAST" ,text ,false);
+            return true;
+
+        }
+
         private void peasant_revenge_lord_start_end_consequence ()
         {
             if(currentRevenge.quest_Results.Contains (PeasantRevengeData.quest_result.accused_hero_killed) &&
@@ -2888,7 +2922,7 @@ namespace PeasantRevenge
 
         private bool peasant_revenge_player_last_words_clickable (out TextObject explanation)
         {
-            explanation = new TextObject ("{=*}A stupid comment you make." ,null);
+            explanation = new TextObject ("{=*}A stupid comment you make, before everything starting to go as planned." ,null);
             return true;
         }
 
@@ -4810,6 +4844,29 @@ namespace PeasantRevenge
             }
         }
 
+        private List<Tuple<string ,int>> get_sorted_traits (Hero hero)
+        {
+            List<Tuple<string, int>> trait_list = new List<Tuple<string, int>>();
+            
+            if(hero != null)
+            {
+                int mercy = Hero.MainHero.GetTraitLevel (DefaultTraits.Mercy);
+                int valor = Hero.MainHero.GetTraitLevel (DefaultTraits.Valor);
+                int calc = Hero.MainHero.GetTraitLevel (DefaultTraits.Calculating);
+                int gener = Hero.MainHero.GetTraitLevel (DefaultTraits.Generosity);
+                int honor = Hero.MainHero.GetTraitLevel (DefaultTraits.Honor);
+
+                trait_list.Add (new Tuple<string ,int> ( DefaultTraits.Mercy.StringId ,mercy ));
+                trait_list.Add (new Tuple<string ,int> (DefaultTraits.Valor.StringId ,valor));
+                trait_list.Add (new Tuple<string ,int> (DefaultTraits.Calculating.StringId ,calc));
+                trait_list.Add (new Tuple<string ,int> (DefaultTraits.Generosity.StringId ,gener));
+                trait_list.Add (new Tuple<string ,int> (DefaultTraits.Honor.StringId ,honor));
+
+                trait_list = trait_list.OrderByDescending (i => i.Item1).ToList();
+            }
+
+            return trait_list;
+        }
 
     }
 }
